--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 			<artifactId>jackson-module-kotlin</artifactId>
 			<!--<version>2.9.8</version>-->
 		</dependency>
-<!--		<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -59,7 +59,7 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
-		</dependency>-->
+		</dependency>
 	</dependencies>
 
 	<build>
