--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,13 @@ server:
   port: 8008
 
 spring:
+  datasource:
+    type: org.postgresql.jdbc2.optional.SimpleDataSource
+    username: postgres
+    password: mysecretpassword
+    url: jdbc:postgresql://localhost:5432/software
+  jpa:
+    hibernate:
+      ddl-auto: update
   application:
     name: currency-converter
