Agregando archivo de configuracion de Cors

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 api:
-  key: PON TU API KEY AQUI
+  key: v4uy0dBrehQBvz7fDuf7bpw44AUxkfHU
   url: "https://api.apilayer.com/exchangerates_data/convert"
 
 server:
