--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     networks:
       - ale-network
   currency-converter:
-    image: currency:2.7.5
+    image: currency:2.7.7
     restart: always
     mem_limit: 512m
     ports:
@@ -26,11 +26,11 @@ services:
     networks:
       - ale-network
   angular:
-    image: angular-software:3.2.0-docker
+    image: angular-software:3.3.0-docker
     ports:
       - "4200:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - /home/ale/Documents/ArquitecturaSoftware/currency-converter/nginx.conf:/etc/nginx/nginx.conf
     restart: always
     networks:
       - ale-network
