--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,16 +20,26 @@ spring:
 keycloak:
   auth-server-url: http://localhost:8080
   autodetect-bearer-only: true
-  credentials:
-    secret: 48PhN2WDKRDfifzCBYVloEH7GnaefCcF
   realm: software
   resource: backend
+  credentials:
+    secret: 48PhN2WDKRDfifzCBYVloEH7GnaefCcF
   ssl-required: external
   use-resource-role-mappings: false
-#  security-constraints:
-#    - authRoles:
-#        - ADMIN
-#      securityCollections:
-#        - name: ADMINISTRADOR
-#          patterns:
-#            - /api/currency/paginas
+  security-constraints:
+    - authRoles:
+        - ADMIN
+      securityCollections:
+        - name: SERVICIOS DE ADMINISTRADOR
+          omitted-methods:
+            - OPTIONS
+          patterns:
+            - /api/currency/paginas
+    - authRoles:
+        - USER
+      securityCollections:
+        - name: SERVICIOS DE USUARIO
+          omitted-methods:
+            - OPTIONS
+          patterns:
+            - /api/currency/exchange
