Agregando patron de diseño Proxy (Control de acceso a la API p.1)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,11 +35,11 @@ keycloak:
             - OPTIONS
           patterns:
             - /api/currency/paginas
-    - authRoles:
-        - USER
-      securityCollections:
-        - name: SERVICIOS DE USUARIO
-          omitted-methods:
-            - OPTIONS
-          patterns:
-            - /api/currency/exchange
+#    - authRoles:
+#        - USER
+#      securityCollections:
+#        - name: SERVICIOS DE USUARIO
+#          omitted-methods:
+#            - OPTIONS
+#          patterns:
+#            - /api/currency/exchange
