Corrigiendo .env (Proyecto terminado)

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 POSTGRES_URL=jdbc:postgresql://postgres:5432/software
+POSTGRES_PASSWORD=mysecretpassword
 API_KEY=v4uy0dBrehQBvz7fDuf7bpw44AUxkfHU
+API_URL=https://api.apilayer.com/exchangerates_data/convert
